--- a/Neighborhoods_Analysis.ipynb
+++ b/Neighborhoods_Analysis.ipynb
@@ -6,6 +6,7 @@
       "name": "Neighborhoods_Analysis.ipynb",
       "version": "0.3.2",
       "provenance": [],
+      "collapsed_sections": [],
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,31 +29,51 @@
       "metadata": {
         "id": "wVS42k9cFahq",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 136
-        },
-        "outputId": "35044fd0-4738-480b-a73b-5ba238af20db"
+        "colab": {}
       },
       "cell_type": "code",
       "source": [
         "import pip    \n",
         "!pip install BeautifulSoup4\n",
         "!pip install lxml\n",
-        "!pip install requests"
+        "!pip install requests\n",
+        "from bs4 import BeautifulSoup\n",
+        "import requests\n",
+        "import csv\n",
+        "import pandas as pd"
       ],
-      "execution_count": 8,
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "gmmW0PD2HdPO",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 85
+        },
+        "outputId": "c03cb5e6-5e27-4b99-eb81-cd3bac201a5f"
+      },
+      "cell_type": "code",
+      "source": [
+        "source = requests.get('https://en.wikipedia.org/wiki/List_of_postal_codes_of_Canada:_M').text\n",
+        "soup = BeautifulSoup(source, 'lxml')\n",
+        "table = soup.find('table', class_='wikitable')\n",
+        "df=pd.DataFrame()\n",
+        "columns = []\n",
+        "for th in table.find_all('th'):\n",
+        "    print(th.text)\n"
+      ],
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Requirement already satisfied: BeautifulSoup4 in /usr/local/lib/python3.6/dist-packages (4.6.3)\n",
-            "Requirement already satisfied: lxml in /usr/local/lib/python3.6/dist-packages (4.2.6)\n",
-            "Requirement already satisfied: requests in /usr/local/lib/python3.6/dist-packages (2.18.4)\n",
-            "Requirement already satisfied: idna<2.7,>=2.5 in /usr/local/lib/python3.6/dist-packages (from requests) (2.6)\n",
-            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.6/dist-packages (from requests) (2018.11.29)\n",
-            "Requirement already satisfied: urllib3<1.23,>=1.21.1 in /usr/local/lib/python3.6/dist-packages (from requests) (1.22)\n",
-            "Requirement already satisfied: chardet<3.1.0,>=3.0.2 in /usr/local/lib/python3.6/dist-packages (from requests) (3.0.4)\n"
+            "Postcode\n",
+            "Borough\n",
+            "Neighbourhood\n",
+            "\n"
           ],
           "name": "stdout"
         }
@@ -60,7 +81,7 @@
     },
     {
       "metadata": {
-        "id": "gmmW0PD2HdPO",
+        "id": "btH3ASaMVB75",
         "colab_type": "code",
         "colab": {}
       },
