--- a/Neighborhoods_Analysis.ipynb
+++ b/Neighborhoods_Analysis.ipynb
@@ -46,7 +46,7 @@
       "metadata": {
         "id": "gmmW0PD2HdPO",
         "colab_type": "code",
-        "outputId": "4392e10b-9b70-475a-fd9a-70960eb06161",
+        "outputId": "e584f7a7-e08d-44b4-9643-7981f87d6770",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -80,7 +80,7 @@
         "data.loc[data[data.Neighbourhood == 'Not assigned'].index, 'Neighbourhood'] = data.loc[data[data.Neighbourhood == 'Not assigned'].index, 'Borough']\n",
         "data.shape"
       ],
-      "execution_count": 13,
+      "execution_count": 36,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -92,19 +92,140 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 13
+          "execution_count": 36
         }
       ]
     },
     {
       "metadata": {
-        "id": "btH3ASaMVB75",
+        "id": "mOh0ePfOdf_K",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 204
+        },
+        "outputId": "d0687491-cda8-44fb-c340-fa0541f20c12"
+      },
+      "cell_type": "code",
+      "source": [
+        "pd.set_option(\"display.precision\", 7)\n",
+        "geo_data = requests.get('https://cocl.us/Geospatial_data')\n",
+        "with open('geo_data.csv', 'wb') as f:\n",
+        "    f.write(geo_data.content)\n",
+        "geo_df = pd.read_csv(\"geo_data.csv\") \n",
+        "geo_df.rename(columns={'Postal Code': 'Postcode'}, inplace=True)\n",
+        "geo_df.head()\n",
+        "neighborhoods = pd.merge(data, geo_df, on=['Postcode'], how='inner')\n",
+        "neighborhoods.head()"
+      ],
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Postcode</th>\n",
+              "      <th>Borough</th>\n",
+              "      <th>Neighbourhood</th>\n",
+              "      <th>Latitude</th>\n",
+              "      <th>Longitude</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>M3A</td>\n",
+              "      <td>North York</td>\n",
+              "      <td>Parkwoods</td>\n",
+              "      <td>43.7532586</td>\n",
+              "      <td>-79.3296565</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>M4A</td>\n",
+              "      <td>North York</td>\n",
+              "      <td>Victoria Village</td>\n",
+              "      <td>43.7258823</td>\n",
+              "      <td>-79.3155716</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>M5A</td>\n",
+              "      <td>Downtown Toronto</td>\n",
+              "      <td>Harbourfront, Regent Park</td>\n",
+              "      <td>43.6542599</td>\n",
+              "      <td>-79.3606359</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>M6A</td>\n",
+              "      <td>North York</td>\n",
+              "      <td>Lawrence Heights, Lawrence Manor</td>\n",
+              "      <td>43.7185180</td>\n",
+              "      <td>-79.4647633</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>M7A</td>\n",
+              "      <td>Queen's Park</td>\n",
+              "      <td>Queen's Park</td>\n",
+              "      <td>43.6623015</td>\n",
+              "      <td>-79.3894938</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "  Postcode           Borough                     Neighbourhood    Latitude  \\\n",
+              "0      M3A        North York                         Parkwoods  43.7532586   \n",
+              "1      M4A        North York                  Victoria Village  43.7258823   \n",
+              "2      M5A  Downtown Toronto         Harbourfront, Regent Park  43.6542599   \n",
+              "3      M6A        North York  Lawrence Heights, Lawrence Manor  43.7185180   \n",
+              "4      M7A      Queen's Park                      Queen's Park  43.6623015   \n",
+              "\n",
+              "    Longitude  \n",
+              "0 -79.3296565  \n",
+              "1 -79.3155716  \n",
+              "2 -79.3606359  \n",
+              "3 -79.4647633  \n",
+              "4 -79.3894938  "
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 35
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "SCVfqb4mehTh",
         "colab_type": "code",
         "colab": {}
       },
       "cell_type": "code",
       "source": [
-        "`"
+        ""
       ],
       "execution_count": 0,
       "outputs": []
