--- a/Neighborhoods_Analysis.ipynb
+++ b/Neighborhoods_Analysis.ipynb
@@ -46,10 +46,10 @@
       "metadata": {
         "id": "gmmW0PD2HdPO",
         "colab_type": "code",
-        "outputId": "e584f7a7-e08d-44b4-9643-7981f87d6770",
+        "outputId": "456e938c-d723-46f3-9d24-e2b4c53d566f",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
+          "height": 221
         }
       },
       "cell_type": "code",
@@ -78,21 +78,93 @@
         "data.reset_index(drop=True, inplace=True)\n",
         "data = data.groupby(['Postcode','Borough'], sort=False).Neighbourhood.apply(', '.join).reset_index(name='Neighbourhood')\n",
         "data.loc[data[data.Neighbourhood == 'Not assigned'].index, 'Neighbourhood'] = data.loc[data[data.Neighbourhood == 'Not assigned'].index, 'Borough']\n",
-        "data.shape"
+        "print(data.shape)\n",
+        "data.head()\n"
       ],
-      "execution_count": 36,
+      "execution_count": 4,
       "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "(103, 3)\n"
+          ],
+          "name": "stdout"
+        },
         {
           "output_type": "execute_result",
           "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Postcode</th>\n",
+              "      <th>Borough</th>\n",
+              "      <th>Neighbourhood</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>M3A</td>\n",
+              "      <td>North York</td>\n",
+              "      <td>Parkwoods</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>M4A</td>\n",
+              "      <td>North York</td>\n",
+              "      <td>Victoria Village</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>M5A</td>\n",
+              "      <td>Downtown Toronto</td>\n",
+              "      <td>Harbourfront, Regent Park</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>M6A</td>\n",
+              "      <td>North York</td>\n",
+              "      <td>Lawrence Heights, Lawrence Manor</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>M7A</td>\n",
+              "      <td>Queen's Park</td>\n",
+              "      <td>Queen's Park</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
             "text/plain": [
-              "(103, 3)"
+              "  Postcode           Borough                     Neighbourhood\n",
+              "0      M3A        North York                         Parkwoods\n",
+              "1      M4A        North York                  Victoria Village\n",
+              "2      M5A  Downtown Toronto         Harbourfront, Regent Park\n",
+              "3      M6A        North York  Lawrence Heights, Lawrence Manor\n",
+              "4      M7A      Queen's Park                      Queen's Park"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 36
+          "execution_count": 4
         }
       ]
     },
@@ -100,11 +172,11 @@
       "metadata": {
         "id": "mOh0ePfOdf_K",
         "colab_type": "code",
+        "outputId": "29137429-3162-47ff-e333-643a384f298f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
-        },
-        "outputId": "d0687491-cda8-44fb-c340-fa0541f20c12"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -118,7 +190,7 @@
         "neighborhoods = pd.merge(data, geo_df, on=['Postcode'], how='inner')\n",
         "neighborhoods.head()"
       ],
-      "execution_count": 35,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -213,7 +285,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 35
+          "execution_count": 5
         }
       ]
     },
