--- a/Neighborhoods_Analysis.ipynb
+++ b/Neighborhoods_Analysis.ipynb
@@ -6,7 +6,9 @@
       "name": "Neighborhoods_Analysis.ipynb",
       "version": "0.3.2",
       "provenance": [],
-      "collapsed_sections": [],
+      "collapsed_sections": [
+        "LtFanX15bTdW"
+      ],
       "include_colab_link": true
     },
     "kernelspec": {
@@ -67,6 +69,16 @@
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "c3pCI3TRbJe-",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "## To explore Neighborhoods in Toronto"
       ]
     },
     {
@@ -318,6 +330,16 @@
     },
     {
       "metadata": {
+        "id": "LtFanX15bTdW",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "## Filter neighborhoods in Toronto"
+      ]
+    },
+    {
+      "metadata": {
         "id": "SCVfqb4mehTh",
         "colab_type": "code",
         "outputId": "7e3f7a95-65db-4b43-f2c3-2c1c09268a7e",
@@ -551,6 +573,16 @@
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "AlrJZna6bAf1",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "##Analyze Each Neighborhood"
       ]
     },
     {
@@ -1810,6 +1842,16 @@
     },
     {
       "metadata": {
+        "id": "awBBRMqIamC-",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "##Top 10 venues for each neighborhood."
+      ]
+    },
+    {
+      "metadata": {
         "id": "GHU07ytpSHRh",
         "colab_type": "code",
         "outputId": "3333ce6c-a9c7-4d8b-95a5-6f84b5230c45",
@@ -1994,6 +2036,16 @@
           },
           "execution_count": 12
         }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "b4zuQ6LraHnf",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "## Cluster Neighborhoods"
       ]
     },
     {
@@ -2298,29 +2350,23 @@
     },
     {
       "metadata": {
-        "id": "_yw0q-h_YwKH",
-        "colab_type": "code",
-        "colab": {}
+        "id": "Msq1z6WmZlBv",
+        "colab_type": "text"
       },
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
         "## Examine Clusters - Find out similar venue category between neighbourhood"
-      ],
-      "execution_count": 0,
-      "outputs": []
+      ]
     },
     {
       "metadata": {
-        "id": "45V7LpODYwZA",
-        "colab_type": "code",
-        "colab": {}
+        "id": "MzR28lRLZs1n",
+        "colab_type": "text"
       },
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "#### Cluster 1"
-      ],
-      "execution_count": 0,
-      "outputs": []
+        "### Cluster 1"
+      ]
     },
     {
       "metadata": {
@@ -3060,6 +3106,16 @@
     },
     {
       "metadata": {
+        "id": "xLrrqgbdZ1t-",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "### Cluster 2"
+      ]
+    },
+    {
+      "metadata": {
         "id": "3kO04h0DpcIu",
         "colab_type": "code",
         "colab": {
@@ -3153,6 +3209,16 @@
     },
     {
       "metadata": {
+        "id": "3sXhjlnLZ4P-",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "### Cluster 3"
+      ]
+    },
+    {
+      "metadata": {
         "id": "k31eEkD5pWs9",
         "colab_type": "code",
         "colab": {
@@ -3242,6 +3308,16 @@
           },
           "execution_count": 18
         }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "n8U48B5eZ6ge",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "### Cluster 4"
       ]
     },
     {
@@ -3354,6 +3430,16 @@
           },
           "execution_count": 19
         }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "883EOXm3aAB2",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "### Cluster 5"
       ]
     },
     {
